# SKN19-2nd-5Team

./: .gitignore  Analysis.ipynb  README.md  accuracy_test.ipynb  code_test.ipynb  environment.yml  pyproject.toml  run.py  test.ipynb  test_run.py  train.ipynb
data/: Suicide.csv  Suicide2010-2021.csv  Suicide_encode.csv  cancer_self.csv  categories_select.csv
data/parameters/: deephit_model_feature_100time.pth  deephit_model_feature_2dcnn.pth  deephit_model_feature_SE.pth  deephit_model_feature_cnn.pth  deephit_model_feature_concat.pth  deephit_model_without_feature_concat.pth  risk_model_event_linears.pth
insight/: COD list.ipynb  EDA.ipynb  data_encode_insight_kmj.ipynb  data_insight_kjw.ipynb  data_insight_kmj.ipynb  data_insight_kmj_2.ipynb  data_insight_lsw.ipynb  encoded_label_dump.txt
modules/: DataAnalysis.py  DataModify.py  DataSelect.py  ModelAnalysis.py  ModelAnalysis_kmj.py  Models.py  smart_csv.py
parameters/: categories.pkl  categories.pt  deephit_model_2D_CNN.pth  deephit_model_2D_CNN_1014_ver3.pth  deephit_model_CNN.pth  deephit_model_Concat.pth  deephit_model_feature.pth  deephit_model_original_Deephit.pth
